<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight">

    <TextView
        android:id="@+id/settings_general_heading"
        style="@style/BorderStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="@dimen/settings_item_padding"
        android:text="@string/pref_header_general"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/emergency_contact_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/emergency_contact" />

    <Spinner
        android:id="@+id/contact_list_spinner"
        android:layout_width="137dp"
        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@id/emergency_contact_label"
        android:layout_below="@+id/settings_general_heading"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginTop="17dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/language_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emergency_contact_label"
        android:layout_alignStart="@+id/emergency_contact_label"
        android:layout_alignTop="@+id/languages_spinner"
        android:text="@string/language" />

    <Spinner
        android:id="@+id/languages_spinner"
        android:layout_width="137dp"
        android:layout_height="32dp"
        android:layout_alignLeft="@+id/contact_list_spinner"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/contact_list_spinner"
        android:layout_marginTop="87dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/settings_checkins_heading"
        style="@style/BorderStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/default_message_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="-169dp"
        android:background="@android:color/white"
        android:padding="@dimen/settings_item_padding"
        android:text="@string/pref_header_check_ins"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/default_message_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emergency_contact_label"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/emergency_contact_label"
        android:layout_marginTop="191dp"
        android:text="@string/default_message" />

    <EditText
        android:id="@+id/default_checkin_text"
        android:layout_width="135dp"
        android:layout_height="32dp"
        android:layout_alignLeft="@+id/contact_list_spinner"
        android:layout_alignStart="@+id/contact_list_spinner"
        android:layout_alignTop="@+id/default_message_label"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/checkin_default_message_text"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/checkin_frequency_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emergency_contact_label"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/emergency_contact_label"
        android:layout_marginTop="236dp"
        android:text="@string/check_in_frequency_label" />

    <Spinner
        android:id="@+id/checkin_frequency_spinner"
        android:layout_width="137dp"
        android:layout_height="32dp"
        android:layout_alignLeft="@+id/contact_list_spinner"
        android:layout_alignStart="@+id/contact_list_spinner"
        android:layout_alignTop="@+id/checkin_frequency_textView"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/checkin_reminder_label"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/emergency_contact_label"
        android:layout_alignStart="@+id/emergency_contact_label"
        android:layout_centerVertical="true"
        android:text="@string/check_in_reminder" />

    <EditText
        android:id="@+id/checkin_reminder_text"
        android:layout_width="132dp"
        android:layout_height="36dp"
        android:layout_alignLeft="@+id/contact_list_spinner"
        android:layout_alignStart="@+id/contact_list_spinner"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="time" />

    <TextView
        android:id="@+id/unresponse_limit_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emergency_contact_label"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/emergency_contact_label"
        android:layout_marginBottom="233dp"
        android:text="@string/unresponse_limit" />

    <EditText
        android:id="@+id/unresponse_limit_text"
        android:layout_width="132dp"
        android:layout_height="29dp"
        android:layout_alignEnd="@+id/default_checkin_text"
        android:layout_alignRight="@+id/default_checkin_text"
        android:layout_alignTop="@+id/unresponse_limit_label"
        android:ems="10"
        android:inputType="time" />

    <TextView
        android:id="@+id/settings_appointments_heading"
        style="@style/BorderStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="170dp"
        android:background="@android:color/white"
        android:padding="@dimen/settings_item_padding"
        android:text="@string/pref_header_reminders"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/settings_reminders_heading"
        style="@style/BorderStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="76dp"
        android:background="@android:color/white"
        android:padding="@dimen/settings_item_padding"
        android:text="@string/pref_header_appointments"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emergency_contact_label"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/emergency_contact_label"
        android:layout_marginBottom="38dp"
        android:text="@string/default_reminder" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="129dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="22dp"
        android:layout_marginRight="26dp"
        android:ems="10"
        android:inputType="number" />


</RelativeLayout>